argocd/presence-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presence-service
  labels:
    app: presence-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: presence-service
  template:
    metadata:
      labels:
        app: presence-service
    spec:
      containers:
        - name: presence-service
          image: deepinnext/presence-service:377e59b2930e0d8486f778c8bf9099c3e8941295
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
