argocd/presence-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presence-service
spec:
  selector:
    app: presence-service
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5000
  type: LoadBalancer
